[Website] Fixed community button spacing for smaller devices (#4997)
* [Website] Fixed community button collapse


* compactor: make time filter take first (#5001)


* Fix CI broken `make check-docs` (#5000)

* docs: make CI `check-docs` happy


* docs: fix check-docs

--- a/website/static/main.css
+++ b/website/static/main.css
@@ -173,7 +173,13 @@ input[type="search"]::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     }
 }
 
-@media (max-width: 768px){
+@media (max-width: 580px) {
+    .list-inline-item {
+        margin-bottom: 1rem;
+    }
+}
+
+@media (max-width: 768px) {
     .hero-logo-container {
         flex-grow: 1;
         max-width: 100%;
